# manipulation-sim

./: .gitignore  README.md  pip.conf  pyproject.toml  run_docker.sh
docker/: Dockerfile  Dockerfile.openpi  build_docker.sh  entrypoint.sh  isaac_python_docker_setup.sh
src/manipulation_isaacsim/: __main__.py  cli_args.py  test.py
src/manipulation_isaacsim/agent/: pi0_agent.py  pi0_agent_ros2.py
src/manipulation_isaacsim/payload/: camera.py  payload_manager.py
src/manipulation_isaacsim/robots/: __init__.py  cobot.py  franka_panda.py  franka_robotiq.py
src/manipulation_isaacsim/utils/: __init__.py  camera_viewer.py  control_panel.py
